--- a/packages/dapp/package.json
+++ b/packages/dapp/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@token/contracts": "workspace:*",
     "@chakra-ui/react": "^1.8.7",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@superfluid-finance/sdk-core": "^0.3.2",
+    "@token/contracts": "workspace:*",
     "@walletconnect/web3-provider": "^1.7.7",
     "ethers": "^5.6.4",
     "framer-motion": "^6",
+    "graphql": "^16.3.0",
     "next": "12.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
