--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -20,6 +20,7 @@
     "@ethersproject/abi": "^5.5.0",
     "@ethersproject/bytes": "^5.5.0",
     "@ethersproject/providers": "^5.5.1",
+    "@superfluid-finance/ethereum-contracts": "^1.1.1",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
