--- a/packages/contracts/.env.example
+++ b/packages/contracts/.env.example
@@ -1,3 +1,8 @@
-ETHERSCAN_API_KEY=ABC123ABC123ABC123ABC123ABC123ABC1
-ROPSTEN_URL=
-PRIVATE_KEY=
+# deployFramework and fill the vars:
+SF_HOST=
+SF_TOKEN_DAI=
+SF_TOKEN_DAIX=
+SF_CFA=
+
+SF_SELLARY=
+SF_RESOLVER=
