--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -19,9 +19,17 @@
   "dependencies": {
     "@ethersproject/abi": "^5.5.0",
     "@ethersproject/bytes": "^5.5.0",
+    "@ethersproject/contracts": "^5.6.0",
     "@ethersproject/providers": "^5.5.1",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/test-helpers": "^0.5.15",
     "@superfluid-finance/ethereum-contracts": "^1.1.1",
-    "lodash": "^4.17.21"
+    "@superfluid-finance/sdk-core": "^0.3.2",
+    "bn.js": "^5.2.0",
+    "dotenv-flow": "^3.2.0",
+    "graphql": "^16.3.0",
+    "lodash": "^4.17.21",
+    "web3": "^1.7.3"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
@@ -31,6 +39,7 @@
     "@typechain/ethers-v5": "^7.2.0",
     "@typechain/hardhat": "^2.3.1",
     "@types/chai": "^4.3.1",
+    "@types/dotenv-flow": "^3.2.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "^12.20.48",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
